# metavision

./: README.md
metavision-master-main/: .gitignore  config.py  main.py  metavision.spec  pyproject.toml  test.py  utils.py
metavision-master-main/.github/workflows/: binary_creation.yml
metavision-master-main/assets/: animation.css  chunked_upload.js  export_tab.css  norm.css  resumable.js  slides.css  style.css  threed.css  upload.css  upload_styles.css  visualization.css
metavision-master-main/export/: export_callback.py  export_layout.py
metavision-master-main/form/: form_callback.py  form_callback_clean.py  form_callback_corrupted.py  form_callback_fixed.py  form_layout.py
metavision-master-main/metavision/: MetaAlign3D.py  MetaAlign3Dold.py  MetaAtlas3D.py  MetaInterp3D.py  MetaNorm3D.py  evaluate.py  utils.py  visualize.py
metavision-master-main/visualization/: animation_callback.py  animation_layout.py  norm_layout.py  slides_callback.py  slides_layout.py  threed_callback.py  threed_layout.py  threed_page.py  threed_page_callback.py  visualization_callback.py  visualization_layout.py
